2002-06-19  olicha  <olivier.chapuis@free.fr>

	* **/Makefile.am
	Added iconv CFLAGS and LIBS for modules which display text

2002-06-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmCommand/Makefile.am:
	use functable.c instead of functions.c

2002-06-10  Mikhael Goikhman  <migo@homemail.com>

	* FvwmPager/FvwmPager.c (ParseOptions):
	* FvwmTaskBar/FvwmTaskBar.c (ParseConfigLine):
	* FvwmTaskBar/Goodies.c (GoodiesParseConfig):
	* FvwmButtons/parse.c (ParseConfigLine):
	* FvwmIconMan/readconfig.c (read_in_resources):
	* FvwmIconBox/FvwmIconBox.c (ParseOptions):
	* FvwmIdent/FvwmIdent.c (main):
	* FvwmForm/FvwmForm.c (ct_*Font):
	* FvwmWinList/FvwmWinList.c (ParseConfigLine):
	* FvwmScript/FvwmScript.c (ParseOptions):
	fixed double quotes in *Font configuration options

2002-06-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c (HandlePanelPress):
	fixed sticky panels in FvwmButtons

2002-06-07  Dan Espen  <dane@mk.telcordia.com>

	* FvwmTheme/FvwmTheme.1: FONT SHADOW EFFECTS reword.

2002-06-04  Mikhael Goikhman  <migo@homemail.com>

	* FvwmIconMan/FvwmIconMan.1:
	* FvwmIconMan/FvwmIconMan.c (main):
	* FvwmIconMan/FvwmIconMan.h:
	* FvwmIconMan/fvwm.c (handle_config_info):
	* FvwmIconMan/fvwm.c (new remanage_winlist):
	* FvwmIconMan/readconfig.c (new process_dynamic_config_line):
	* FvwmIconMan/x.c:
	* FvwmIconMan/xmanager.c:
	FvwmIconMan may now change resolution dynamically, just issue
	"*FvwmIconMan: resolution desk" while FvwmIconMan is running

	* FvwmIconMan/FvwmIconMan.1:
	* FvwmIconMan/x.c (set_window_properties):
	don't use "FvwmModule" as a class, this is not optimal with aliases;
	document that FvwmIconMan supports aliases

	* FvwmScript/libyywrap.c:
	* FvwmScript/scanner.c:
	removed $Header

2002-06-03  olicha  <olivier.chapuis@free.fr>

	* FvwmScript/script.y:
	* FvwmScript/scanner.l:
	* FvwmScript/script.c:
	* FvwmScript/scanner.c:
	Run make syntax for removing debug code

2002-06-03  olicha  <olivier.chapuis@free.fr>
