@@ -1,5 +1,5 @@
 .\" Automatically generated by Pod::Man version 1.02
-.\" Tue May 28 04:32:38 2002
+.\" Sun Jun 23 13:06:35 2002
 .\"
 .\" Standard preamble:
 .\" ======================================================================
@@ -138,7 +138,7 @@
 .\" ======================================================================
 .\"
 .IX Title "FVWMPERL 1"
-.TH FVWMPERL 1 "perl v5.6.0" "2002-05-28" "FVWM Module"
+.TH FVWMPERL 1 "perl v5.6.0" "2002-06-23" "FVWM Module"
 .UC
 .SH "NAME"
 FvwmPerl \- the \s-1FVWM\s0 perl manipulator
@@ -165,8 +165,9 @@ There are several command line switches:
 \&\fBFvwmPerl\fR
 [ \fB\*(--eval\fR line ]
 [ \fB\*(--load\fR file ]
-[ \fB\*(--preprocess\fR [ \fB\*(--quote\fR char ] [ \fB\*(--command\fR ] [ line | file ] ]
-[ \fB\*(--stay\fR ]
+[ \fB\*(--preprocess\fR [ \fB\*(--quote\fR char ] [ \fB\*(--command\fR ]
+[ \fB\*(--nosend\fR ] [ \fB\*(--noremove\fR ] [ line | file ] ]
+[ \fB\*(--stay\fR ] [ \-\-nolock ]
 [ alias ]
 .PP
 Long switches may be abbreviated to short one-letter switches.
@@ -177,13 +178,29 @@ Long switches may be abbreviated to short one-letter switches.
 .PP
 \&\fB\-p\fR|\fB\*(--preprocess\fR file \- preprocess the given fvwmrc file
 .PP
-\&\fB\-c\fR|\fB\*(--command\fR line \- \s-1FVWM\s0 command to preprocess intead of file
+\&\fB\-c\fR|\fB\*(--command\fR line \- an \s-1FVWM\s0 command to be preprocessed intead of file
 .PP
 \&\fB\-q\fR|\fB\*(--quote\fR char \- changes the default '%' quote
+.PP
+\&\fB\*(--nosend\fR \- do not send the preprocessed file to \fIfvwm\fR for \fBRead\fRing,
+the default is send. Useful for preprocessing non fvwmrc files.
+.PP
+\&\fB\*(--noremove\fR \- do not remove the preprocessed file after sending
+it to \fIfvwm\fR for \fBRead\fRing, the default is remove. Useful for debugging.
 .PP
 \&\fB\-s\fR|\fB\*(--stay\fR \- continues an execution after \fB\*(--eval\fR, \fB\*(--load\fR or
 \&\fB\*(--preprocess\fR are processed.  By default, the module is not persistent
 in this case, i.e. \fB\*(--nostay\fR is assumed.
+.PP
+\&\fB\*(--nolock\fR \- when one of the 3 action options is given, this option causes
+unlocking \fIfvwm\fR immediatelly. By default the requested action is executed
+synchronously; this only makes difference when invoked like:
+.PP
+.Vb 1
+\&  ModuleSynchronous FvwmPerl --preprocess someconfig.ppp
+.Ve
+If \fB\*(--nolock\fR is added here, \fBModuleSynchronous\fR returns immediatelly.
+Note that \fBModule\fR returns immediatelly regardless of this option.
 .SH "ACTIONS"
 .IX Header "ACTIONS"
 There are several actions that FvwmPerl may perform:
@@ -218,7 +235,8 @@ on the line and end anywhere on the same or an other line, is perl code.
 .Sp
 The \fIquote\fR parameter changes perl code delimeters.  If a single char
 is given, like '@', the delimeters are \fB@{\fR ... \fB}@\fR.
-If the given quote is 2 chars, like '<>', the quotes are <{ ... }>.
+If the given quote is 2 chars, like \fB<>\fR, the quotes are
+\&\fB<{\fR ... \fB}>\fR
 .Sp
 The perl code is substituted for the result of its evaluation.
 I.e. %{$a = \*(L"c\*(R"; ++$a}% is replaced with \*(L"d\*(R".
@@ -238,6 +256,69 @@ preprocesses it and returns the preprocessed result. Avoid recursion.
 If any embedded perl code contains an error, it is printed to the standard
 error stream and prepended with the \fI[FvwmPerl][preprocess]:\fR header.
 The result of substitution is empty in this case.
+.Sp
+The following variables may be used in the perl code:
+.Sp
+$USER,
+\&\f(CW$DISPLAY\fR,
+\&\f(CW$WIDTH\fR,
+\&\f(CW$HEIGHT\fR,
+\&\f(CW$FVWM_VERSION\fR,
+\&\f(CW$FVWM_MODULEDIR\fR,
+\&\f(CW$FVWM_DATADIR\fR,
+\&\f(CW$FVWM_USERDIR\fR
+.Sp
+The following line based directives are recognized when preprocessing.
+They are processed after the perl code (if any) is substituted.
+.RS 4
+.Ip "%\fBRepeat\fR \fIcount\fR" 4
+.IX Item "%Repeat count"
+Causes the following lines to be repeated \fIcount\fR times.
+.Ip "%\fBModuleConfig\fR \fImodule-name\fR [ destroy ]" 4
+.IX Item "%ModuleConfig module-name [ destroy ]"
+Causes the following lines to be interpreted as the given module configuration.
+If \*(L"destroy\*(R" is specified the previous module configuration is destroyed first.
+.Ip "%\fBPrefix\fR \fIprefix\fR" 4
+.IX Item "%Prefix prefix"
+Prefixes the following lines with the quoted \fIprefix\fR.
+.Ip "%\fBEnd\fR any-optional-comment" 4
+.IX Item "%End any-optional-comment"
+Ends any of the directives described above, may be nested.
+.RE
+.RS 4
+.Sp
+Examples:
+.Sp
+.Vb 6
+\&  %Prefix "AddToFunc SwitchToWindow I"
+\&    Iconify off
+\&    WindowShade off
+\&    Raise
+\&    WrapToWindow 50 50
+\&  %End
+.Ve
+.Vb 6
+\&  %ModuleConfig FvwmPager destroy
+\&    Colorset 0
+\&    Font lucidasans-10
+\&    DeskTopScale 28
+\&    MiniIcons
+\&  %End ModuleConfig FvwmPager
+.Ve
+.Vb 9
+\&  %Prefix "All (MyWindowToAnimate) ResizeMove "
+\&  100 100 %{($WIDTH - 100) / 2}% %{($HEIGHT - 100) / 2}%
+\&  %Repeat %{$count}%
+\&  br w+2c w+2c w-1c w-1c
+\&  %End
+\&  %Repeat %{$count}%
+\&  br w-2c w-2c w+1c w+1c
+\&  %End
+\&  %End Prefix
+.Ve
+Additional preprocess parameters \-\-nosend and \-\-noremove may be given too.
+See their description at the top.
+.RE
 .PP
 These 3 actions may be requested in one of 3 ways: 1) in the command line when
 FvwmPerl is invoked (in this case FvwmPerl is short-lived unless \fB\*(--stay\fR
@@ -381,8 +462,8 @@ Here are more pairs of equivalent lines:
 \&    Module FvwmPerl -e 'load("my.fpl")' -s
 .Ve
 .Vb 2
-\&    SendToModule FvwmPerl preprocess my.ppp
-\&    SendToModule FvwmPerl eval preprocess("my.ppp");
+\&    SendToModule FvwmPerl preprocess --quote '@' my.ppp
+\&    SendToModule FvwmPerl eval preprocess({quote => '@'}, "my.ppp");
 .Ve
 Warning, you may affect the way FvwmPerl works by evaluating approprite
 perl code, this is considered a feature not a bug.  But please don't do this,
