@@ -40,19 +40,26 @@ my $fileToLoad = undef;
 my $preprocess = 0;
 # whether continue running after --eval, --load or --preprocess, default is no
 my $stay = 0;
+my $nolock = 0;
+my $debug = 0;
 my $detached = 0;
 my $ppArgs = {};
+my $ppFileCount = 0;
 
 my $preprocessOptions = {
-	"command"     => \$ppArgs->{command},
-	"quote=s"     => \$ppArgs->{quote},
+	"c|command"    => \$ppArgs->{command},
+	"q|quote=s"    => \$ppArgs->{quote},
+	"nosend"       => \$ppArgs->{nosend},
+	"noremove"     => \$ppArgs->{noremove},
 };
 
 my $options = {
-	"eval=s"      => \$lineToEval,
-	"load=s"      => \$fileToLoad,
-	"preprocess"  => \$preprocess,
-	"stay!"       => \$stay,
+	"e|eval=s"     => \$lineToEval,
+	"l|load=s"     => \$fileToLoad,
+	"p|preprocess" => \$preprocess,
+	"s|stay!"      => \$stay,
+	"nolock"       => \$nolock,
+	"debug=i"      => \$debug,
 	%$preprocessOptions,
 };
 
@@ -62,6 +69,7 @@ my $module = new FVWM::Module(
 	SyncMask      => M_STRING,
 	EnableOptions => $options,
 	EnableAlias   => 1,
+	Debug         => \$debug,  # $debug is not really ready yet
 );
 
 sub printActionError ($$) {
@@ -133,6 +141,83 @@ sub doEval ($) {
 	}
 }
 
+sub preprocessDirectives ($;$) {
+	my $textRef = shift;
+	my $depth = shift || 0;
+
+	my $quote = $PreprocessNamespace::PPP_QUOTE1;
+	my $processedText = "";
+
+	my $errorSub = sub ($) {
+		printActionError("preprocess", "$_[0], preprocessing failed");
+	};
+	my ($start, $directive, $params, $end);
+
+	while ($$textRef =~ m{\A(.*?)^$quote(\w+)[ \t]*(.*?)\n(.*)\z}ms) {
+		($start, $directive, $params, $end) = ($1, $2, $3, $4);
+		$$textRef = "";
+		#print "\t$depth $directive $params\n";
+
+		if (eqi($directive, "End")) {
+			if ($depth == 0) {
+				$errorSub->("Unexpected ${quote}End");
+				return undef;
+			}
+			$$textRef = $processedText . $start;
+			return $end;
+		}
+
+		my $subtext = $end;
+
+		if (eqi($directive, "Repeat")) {
+			my $count = getToken($params);
+			unless (defined $count && $count =~ /^\d+$/) {
+				$errorSub->("Usage: ${quote}Repeat count");
+				return undef;
+			}
+			$end = &preprocessDirectives(\$subtext, $depth + 1);
+			return undef unless defined $end;
+			$start .= $subtext x $count;
+			next;
+		}
+		my $prefix = undef;
+		if (eqi($directive, "ModuleConfig")) {
+			my ($moduleName, $destroy) = getTokens($params, 2);
+			unless (defined $moduleName) {
+				$errorSub->("Usage: ${quote}ModuleConfig module-name");
+				return undef;
+			}
+			if (defined $destroy && eqi($destroy, "destroy")) {
+				$start .= "DestroyModuleConfig $moduleName: *\n";
+			};
+			$prefix = "*$moduleName: ";
+		}
+		if (defined $prefix || eqi($directive, "Prefix")) {
+			$prefix = getToken($params) unless defined $prefix;
+			unless (defined $prefix) {
+				$errorSub->("Usage: ${quote}Prefix prefix");
+				return undef;
+			}
+			$end = &preprocessDirectives(\$subtext, $depth + 1);
+			return undef unless defined $end;
+			foreach (split(/\n/s, $subtext)) {
+				$start .= "$prefix$_\n" unless /^\s*$/;
+			}
+			next;
+		}
+	} continue {
+		$processedText .= $start;
+		$$textRef = $end;
+	}
+
+	if ($depth == 0) {
+		$$textRef = $processedText . $$textRef if $processedText ne "";
+		return "";
+	}
+	$errorSub->("No corresponding ${quote}End found");
+	return undef;
+}
+
 sub preprocess ($;$) {
 	my $args = shift;
 	my $data = shift;
@@ -146,8 +231,10 @@ sub preprocess ($;$) {
 		return;
 	}
 
-	my $command = $args->{command};
-	my $quote = $args->{quote} || '%';
+	my $nosend   = $args->{nosend};
+	my $noremove = $args->{noremove};
+	my $command  = $args->{command};
+	my $quote    = $args->{quote} || '%';
 	my ($quote1, $quote2) = split(//, $quote, 2);
 	$quote2 ||= $quote1;
 
@@ -165,8 +252,12 @@ sub preprocess ($;$) {
 		no strict "vars";
 		# OR-ing is a work around for "used once" warning
 
-		$PPP_DEPTH = $depth;
-		$PPP_QUOTE = $quote;
+		$PPP_DEPTH    = $depth;
+		$PPP_QUOTE    = $quote;
+		$PPP_QUOTE1   = $quote1;
+		$PPP_QUOTE2   = $PPP_QUOTE2 || $quote2;
+		$PPP_NOSEND   = $nosend;
+		$PPP_NOREMOVE = $noremove;
 		$USER    = $USER    || $ENV{USER};
 		$DISPLAY = $DISPLAY || $ENV{DISPLAY};
 		$WIDTH   = $WIDTH   || $dimentions[0];
@@ -177,6 +268,7 @@ sub preprocess ($;$) {
 		$FVWM_USERDIR = $FVWM_USERDIR || $module->userDataDir;
 	}
 
+	# perl code substitution first
 	$$textRef =~ s/\Q$quote1\E { ( .*? ) } \Q$quote2\E/
 		my $result = eval "
 			no strict;
@@ -190,19 +282,29 @@ sub preprocess ($;$) {
 		$result;
 	/sgex;
 
+	# line based directives
+	preprocessDirectives($textRef);
+
 	my $tempFileName = $module->userDataDir . "/.FvwmPerl-preprocess-$$";
+	$tempFileName .= "-" . (++$ppFileCount);
 	saveFile($tempFileName, $textRef);
 
-	$module->send("Read $tempFileName");
-	$module->send("Exec rm -f '$tempFileName'");
+	unless ($nosend) {
+		$module->send("Read $tempFileName");
+		$module->send("Exec rm -f '$tempFileName'")
+			unless $noremove;
+	}
 }
 
 sub PreprocessNamespace::include ($) {
 	my $file = shift;
-	return ::preprocess({
-		depth => $PreprocessNamespace::PPP_DEPTH + 1,
-		quote => $PreprocessNamespace::PPP_QUOTE,
+	::preprocess({
+		depth    => $PreprocessNamespace::PPP_DEPTH + 1,
+		quote    => $PreprocessNamespace::PPP_QUOTE,
+		nosend   => $PreprocessNamespace::PPP_NOSEND,
+		noremove => $PreprocessNamespace::PPP_NOREMOVE,
 	}, $file);
+	return "";
 }
 
 # ----------------------------------------------------------------------------
@@ -252,6 +354,9 @@ $module->addHandler(M_STRING, \&processMessage);
 
 # ----------------------------------------------------------------------------
 # execution
+
+# unlock fvwm earlier if requested
+$module->sendReady if $nolock;
 
 if (defined $lineToEval) {
 	doEval($lineToEval);
@@ -303,8 +408,9 @@ There are several command line switches:
 B<FvwmPerl>
 [ B<--eval> line ]
 [ B<--load> file ]
-[ B<--preprocess> [ B<--quote> char ] [ B<--command> ] [ line | file ] ]
-[ B<--stay> ]
+[ B<--preprocess> [ B<--quote> char ] [ B<--command> ]
+[ B<--nosend> ] [ B<--noremove> ] [ line | file ] ]
+[ B<--stay> ] [ --nolock ]
 [ alias ]
 
 Long switches may be abbreviated to short one-letter switches.
@@ -315,13 +421,28 @@ B<-l>|B<--load> file - evaluate perl code in the given file
 
 B<-p>|B<--preprocess> file - preprocess the given fvwmrc file
 
-B<-c>|B<--command> line - FVWM command to preprocess intead of file
+B<-c>|B<--command> line - an FVWM command to be preprocessed intead of file
 
 B<-q>|B<--quote> char - changes the default '%' quote
+
+B<--nosend> - do not send the preprocessed file to I<fvwm> for B<Read>ing,
+the default is send. Useful for preprocessing non fvwmrc files.
+
+B<--noremove> - do not remove the preprocessed file after sending
+it to I<fvwm> for B<Read>ing, the default is remove. Useful for debugging.
 
 B<-s>|B<--stay> - continues an execution after B<--eval>, B<--load> or
 B<--preprocess> are processed.  By default, the module is not persistent
 in this case, i.e. B<--nostay> is assumed.
+
+B<--nolock> - when one of the 3 action options is given, this option causes
+unlocking I<fvwm> immediatelly. By default the requested action is executed
+synchronously; this only makes difference when invoked like:
+
+  ModuleSynchronous FvwmPerl --preprocess someconfig.ppp
+
+If B<--nolock> is added here, B<ModuleSynchronous> returns immediatelly.
+Note that B<Module> returns immediatelly regardless of this option.
 
 =head1 ACTIONS
 
@@ -362,7 +483,8 @@ on the line and end anywhere on the same or an other line, is perl code.
 
 The I<quote> parameter changes perl code delimeters.  If a single char
 is given, like '@', the delimeters are B<@{> ... B<}@>.
-If the given quote is 2 chars, like '<>', the quotes are <{ ... }>.
+If the given quote is 2 chars, like B<E<lt>E<gt>>, the quotes are
+B<E<lt>{> ... B<}E<gt>>
 
 The perl code is substituted for the result of its evaluation.
 I.e. %{$a = "c"; ++$a}% is replaced with "d".
@@ -382,6 +504,70 @@ preprocesses it and returns the preprocessed result. Avoid recursion.
 If any embedded perl code contains an error, it is printed to the standard
 error stream and prepended with the I<[FvwmPerl][preprocess]:> header.
 The result of substitution is empty in this case.
+
+The following variables may be used in the perl code:
+
+$USER,
+$DISPLAY,
+$WIDTH,
+$HEIGHT,
+$FVWM_VERSION,
+$FVWM_MODULEDIR,
+$FVWM_DATADIR,
+$FVWM_USERDIR
+
+The following line based directives are recognized when preprocessing.
+They are processed after the perl code (if any) is substituted.
+
+=over 4
+
+=item %B<Repeat> I<count>
+
+Causes the following lines to be repeated I<count> times.
+
+=item %B<ModuleConfig> I<module-name> [ destroy ]
+
+Causes the following lines to be interpreted as the given module configuration.
+If "destroy" is specified the previous module configuration is destroyed first.
+
+=item %B<Prefix> I<prefix>
+
+Prefixes the following lines with the quoted I<prefix>.
+
+=item %B<End> any-optional-comment
+
+Ends any of the directives described above, may be nested.
+
+=back
+
+Examples:
+
+  %Prefix "AddToFunc SwitchToWindow I"
+    Iconify off
+    WindowShade off
+    Raise
+    WrapToWindow 50 50
+  %End
+
+  %ModuleConfig FvwmPager destroy
+    Colorset 0
+    Font lucidasans-10
+    DeskTopScale 28
+    MiniIcons
+  %End ModuleConfig FvwmPager
+
+  %Prefix "All (MyWindowToAnimate) ResizeMove "
+  100 100 %{($WIDTH - 100) / 2}% %{($HEIGHT - 100) / 2}%
+  %Repeat %{$count}%
+  br w+2c w+2c w-1c w-1c
+  %End
+  %Repeat %{$count}%
+  br w-2c w-2c w+1c w+1c
+  %End
+  %End Prefix
+
+Additional preprocess parameters --nosend and --noremove may be given too.
+See their description at the top.
 
 =back
 
@@ -525,8 +711,8 @@ Here are more pairs of equivalent lines:
     Module FvwmPerl --load "my.fpl" --stay
     Module FvwmPerl -e 'load("my.fpl")' -s
 
-    SendToModule FvwmPerl preprocess my.ppp
-    SendToModule FvwmPerl eval preprocess("my.ppp");
+    SendToModule FvwmPerl preprocess --quote '@' my.ppp
+    SendToModule FvwmPerl eval preprocess({quote => '@'}, "my.ppp");
 
 Warning, you may affect the way FvwmPerl works by evaluating approprite
 perl code, this is considered a feature not a bug.  But please don't do this,
