@@ -20,13 +20,21 @@ Exec xmessage -g %{"$windowSize{x}x$windowSize{y}"}%+%{$pos_x}%+%{$pos_y}% \
 	-name MyXMessage -title "Testing FvwmPerl preprocess" "Hello world!"
 
 Wait MyXMessage
-All (MyXMessage) WindowShade ShadeAgain NE
-All (MyXMessage) WindowShade ShadeAgain N
-All (MyXMessage) WindowShade ShadeAgain E
-All (MyXMessage) WindowShade ShadeAgain SE
-All (MyXMessage) WindowShade ShadeAgain S
-All (MyXMessage) WindowShade ShadeAgain N
+
+%Repeat 2
+%Prefix "All (MyXMessage) WindowShade ShadeAgain"
+	NE
+	N
+	E
+	SE
+	S
+	N
+%End Prefix
 All (MyXMessage) WindowShade Off
-All (MyXMessage) WindowShade ShadeAgain W
-All (MyXMessage) WindowShade ShadeAgain NW
-All (MyXMessage) WindowShade Off
+%End
+
+%ModuleConfig FvwmIdent destroy
+	Colorset 0
+	Font lucidasans-10
+	MinimalLayer 5
+%End ModuleConfig FvwmIdent
